--- a/resources/css/main.css
+++ b/resources/css/main.css
@@ -1,4 +1,3 @@
-/* Enter your CSS here */
-body {
-    background-color: #f7f7f9!Important;
+body > #vue-app, body > #vue-error {
+    background-color: #000;
 }
